@@ -4576,7 +4576,6 @@
 	the &latex; typesetting system installed, and are able to generate
 	and view PDF or PostScript output.
       </para>
-
       <para>
 	In the session icon window, you can drag up to eight graphs onto
 	the graph page icon.  When you double-click on the graph page (or
@@ -4584,40 +4583,60 @@
 	the selected graphs will be composed and opened in a suitable
 	viewer.  From there you should be able to print the page.
       </para>
-
       <para>
 	To clear the graph page, right-click on its icon and select
 	<quote>Clear</quote>.
-      </para> 
-
+      </para>
       <para>
-	In script (or console) mode, you can add a graph to the graph page by
-	issuing the command <lit>graphpg add</lit> after saving
-	a named graph, as in
+	Note that on systems other than MS Windows, you may have to
+	adjust the setting for the program used to view PDF or
+	PostScript files. Find that under the <quote>Programs</quote>
+	tab in the gretl Preferences dialog box (under the Tools menu
+	in the main window).
+      </para>
+      <para>
+	It's also possible to operate on the graph page via script,
+	or using the console (in the GUI program). The following
+	commands and options are supported:
+      </para>
+      <para>
+	To add a graph to the graph page, issue the command
+	<lit>graphpg add</lit> after saving a named graph, as in
       </para>
       <code>
 	grf1 &lt;- gnuplot Y X
 	graphpg add
       </code>
-
+       <para>
+	To display the graph page: <lit>graphpg show</lit>.
+      </para>
       <para>
-	Also in script mode you can call for display of the graph page
-	using the command <lit>graphpg show</lit>, and can clear the
-	page via <lit>graphpg free</lit>. In addition you can adjust
-	the scale of the font used in the graph page via <lit>graphpg
-	fontscale</lit> <repl>scale</repl>, where <repl>scale</repl>
-	is a multiplier (with a default of 1.0). Thus to make
-	the font size 50 percent bigger than the default you can do
+	To clear the graph page: <lit>graphpg free</lit>.
+      </para>
+      <para>
+	To adjust the scale of the font used in the graph page, use
+	<lit>graphpg fontscale</lit> <repl>scale</repl>, where
+	<repl>scale</repl> is a multiplier (with a default of
+	1.0). Thus to make the font size 50 percent bigger than the
+	default you can do
       </para>
       <code>
 	graphpg fontscale 1.5
       </code>
-
       <para>
-	Note that on systems other than MS Windows, you may have to adjust the
-	setting for the program used to view PDF or PostScript files. Find
-	that under the <quote>Programs</quote> tab in the gretl Preferences
-	dialog box (under the Tools menu in the main window).
+	To call for printing of the graph page to file, use the flag
+	<opt>output=</opt> plus a filename; the filename should have
+	the suffix <quote><lit>.pdf</lit></quote>,
+	<quote><lit>.ps</lit></quote> or
+	<quote><lit>.eps</lit></quote>. For example:
+      </para>
+      <code>
+	graphpg --output="myfile.pdf"
+      </code>
+      <para>
+	In this context the output uses colored lines by default; to
+	use dot/dash patterns instead of colors you can append the
+	<opt>monochrome</opt> flag.
       </para>
 
     </description>
